--- a/popup/menu.html
+++ b/popup/menu.html
@@ -5,36 +5,16 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width" initial-scale="1.0">
 	<link rel="stylesheet" type="text/css" href="menu.css">
-	<script language="javascript">
-		function getHostname(url) {
-			// This function will be used by the listener to get a hostname from a url
-			var pattern=/(.+:\/\/)?([^\/]+)(\/.*)*/i;
-			var arr=pattern.exec(url);
-			return arr[2];
-		}
-
-		// TO DO: Add listener here
-			//  var url = tabs.activeTab.url;
-			// var thisSite = getHostname(url);
-
-			// tabs.activeTab.open(url.replace('https://'+thisSite,'https://'+destination));
-	</script>
 	</head>
 	<body>
 		<div>
 		<h1> Steemswitch</h1>
-		<h2><strong>View on:</strong></h2>
-			<p>
-			<a href="https://steemit.com" title="steemit" class="steemit"><img src="/icons/steem.png" title="steemit"class="flowLeft">Steemit</a>
-			<a href="https://busy.org" title="busy" class="busy"><img src="/icons/busy.png" title="busy"class="flowLeft">Busy</a>
-			<a href="https://beta.chainbb.com" title="chainbb" class="chainbb"><img src="/icons/steem.png" title="chainbb"class="flowLeft">Chainbb</a>
-			</p>
-		<hr>
-		<h2><strong>Analyse using:</strong></h2>
-		<p>
-			<a href="https://steemdb.com" title="steemdb" class="steemdb"><img src="/icons/steem.png" title="steemdb"class="flowLeft">Steemdb</a>
-			<a href="https://steemd.com" title="steemd" class="steemd"><img src="/icons/steemd.png" title="steemd" class=flowLeft>Steemd</a>
-		</p>
+		<h2><strong>New tab buttons:</strong></h2>
+		<div>
+			<span href="https://stackexchange.com" title="steemdb" class="opennewtab"><img src="/icons/wrench-go.png" title="steemdb" class="flowLeft">New tab 1</span>
+			<span href="https://stackoverflow.com" title="steemd" class="opennewtab"><img src="/icons/wrench-go.png" title="steemd" class=flowLeft>New tab 2</span>
 		</div>
+		</div>
+		<script language="javascript" src="menu.js"></script>
 	</body>
 </html>
