--- a/popup/menu.html
+++ b/popup/menu.html
@@ -1,15 +1,15 @@
 <!doctype html>
 <html lang="en">
 	<head>
-	<title>Steemswitch</title>
+	<title>New tab example</title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width" initial-scale="1.0">
 	<link rel="stylesheet" type="text/css" href="menu.css">
 	</head>
 	<body>
 		<div>
-		<h1> Steemswitch</h1>
-		<h2><strong>New tab buttons:</strong></h2>
+		<h1>Example</h1>
+		<h2><strong>Open:</strong></h2>
 		<div>
 			<span href="https://stackexchange.com" title="steemdb" class="opennewtab"><img src="/icons/wrench-go.png" title="steemdb" class="flowLeft">New tab 1</span>
 			<span href="https://stackoverflow.com" title="steemd" class="opennewtab"><img src="/icons/wrench-go.png" title="steemd" class=flowLeft>New tab 2</span>
